--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   firebase_storage: ^3.1.3
   firebase_database: ^3.1.1
   cupertino_icons: ^0.1.2
+  google_maps_flutter: ^0.5.24+1
+  location: ^2.5.4
 
 dev_dependencies:
   flutter_test:
@@ -26,3 +28,4 @@ flutter:
   assets:
     - assets/logo.png
     - assets/login.jpg
+    - assets/current_location.png
