--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   google_maps_flutter: ^0.5.24+1
   location: ^2.5.4
+  geoflutterfire: ^2.1.0
+  rxdart: ^0.23.1
 
 dev_dependencies:
   flutter_test:
